<?xml version="1.0"?>
<package format="2">
  <name>warper</name>
  <version>0.1.0</version>
  <description>Warp fisheye images.</description>
  <maintainer email="gftabor@wpi.edu">Griffin Tabor</maintainer>
  <license>MIT</license>
  <url type="website"></url>
  <author email="gftabor@wpi.edu">Griffin Tabor </author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>actionlib</depend>

  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>
</package>
